# kpsr-robotics

./: .gitignore  .gitmodules  CMakeLists.txt  KlepsydraRoboticsConfig.cmake.in  KlepsydraRoboticsConfigVersion.cmake.in  README.md
.github/workflows/: prcodecheck.yml  push.bkp  push.yml
api-doc/: api-kpsr-geometry-application.md  api-kpsr-geometry-dds-composition.md  api-kpsr-geometry-rosstg-composition.md  api-kpsr-geometry-zmq-composition.md  api-kpsr-sensors-application.md  api-kpsr-sensors-ddsstg-composition.md  api-kpsr-sensors-rosstg-composition.md  api-kpsr-sensors-zmq-composition.md  api-kpsr-vision-application.md  api-kpsr-vision-composition.md  api-kpsr-vision-ddsstg-composition.md  api-kpsr-vision-zmq-composition.md
ci/ROS/: Dockerfile_ROS  Jenkinsfile
ci/Vanilla/: Dockerfile_Vanilla  Dockerfile_install  Dockerfile_test  Jenkinsfile
ci/ZMQ/: Dockerfile_ZMQ  Jenkinsfile
geometry/: CMakeLists.txt
geometry/modules/dds_mdlw/: CMakeLists.txt
geometry/modules/dds_mdlw/idl/: pose_event.idl
geometry/modules/dds_mdlw/include/klepsydra/dds_geometry/: group_definitions.h  pose_event_dds_mapper.h
geometry/modules/geometry/: CMakeLists.txt
geometry/modules/geometry/include/klepsydra/geometry/: gps.h  group_definitions.h  header.h  imu.h  pose_event_data.h  position_target.h  quaternion.h  vector3.h
geometry/modules/ros_mdlw/kpsr_ros_geometry/: CMakeLists.txt  package.xml
geometry/modules/ros_mdlw/kpsr_ros_geometry/node/: pose_event_ros_handler.js
geometry/modules/ros_mdlw/kpsr_ros_geometry/src/: pose_builder.cpp
geometry/modules/ros_mdlw/kpsr_ros_geometry/test/: test_kpsr_ros_geometry.cpp
geometry/modules/zmq_mdlw/: CMakeLists.txt
geometry/tests/: CMakeLists.txt
geometry/tests/dds_geometry_tests/: CMakeLists.txt
geometry/tests/dds_geometry_tests/include/: pose_event_publisher_service.h  pose_event_subscriber_service.h
geometry/tests/dds_geometry_tests/src/: ddsstg_geometry_test.cpp
geometry/tests/zmq_geometry_tests/: CMakeLists.txt
geometry/tests/zmq_geometry_tests/include/: pose_event_publisher_service.h  pose_event_subscriber_service.h
geometry/tests/zmq_geometry_tests/src/: zmqstg_geometry_test.cpp
uav_sensors/: CMakeLists.txt
uav_sensors/modules/: CMakeLists.txt
uav_sensors/modules/dds_mdlw/: CMakeLists.txt
uav_sensors/modules/dds_mdlw/idl/: laser_scan_event.idl
uav_sensors/modules/ros_mdlw/kpsr_ros_sensors/: CMakeLists.txt  package.xml
uav_sensors/modules/ros_mdlw/kpsr_ros_sensors/test/: test_kpsr_ros_sensors.cpp
uav_sensors/modules/uav_sensors/: CMakeLists.txt
uav_sensors/modules/zmq_mdlw/: CMakeLists.txt
uav_sensors/modules/zmq_mdlw/include/klepsydra/zmq_sensors/: group_definitions.h  laser_scan_event_serializer.h
uav_sensors/tests/: CMakeLists.txt
uav_sensors/tests/dds_uav_sensors_tests/: CMakeLists.txt
uav_sensors/tests/dds_uav_sensors_tests/include/: laser_scan_event_publisher_service.h  laser_scan_event_subscriber_service.h
uav_sensors/tests/dds_uav_sensors_tests/src/: ddsstg_sensors_test.cpp
uav_sensors/tests/zmq_uav_sensors_tests/: CMakeLists.txt
uav_sensors/tests/zmq_uav_sensors_tests/include/: laser_scan_event_publisher_service.h  laser_scan_event_subscriber_service.h
uav_sensors/tests/zmq_uav_sensors_tests/src/: zmqstg_sensors_test.cpp
vision_ocv/: CMakeLists.txt
vision_ocv/benchmark/: CMakeLists.txt
vision_ocv/benchmark/modules/: CMakeLists.txt
vision_ocv/benchmark/modules/src/: BM_ocv_vision_factory_test.cpp
vision_ocv/modules/: CMakeLists.txt
vision_ocv/modules/dds_mdlw/: CMakeLists.txt
vision_ocv/modules/dds_mdlw/idl/: image_event_data.idl
vision_ocv/modules/dds_mdlw/include/klepsydra/dds_vision_ocv/: group_definitions.h  image_event_data_dds_mapper.h
vision_ocv/modules/mem_mdlw/: CMakeLists.txt
vision_ocv/modules/mem_mdlw/include/klepsydra/mem_vision_ocv/: basic_vision_ocv_provider.h  group_definitions.h  image_multiplexer_vision_ocv_provider.h
vision_ocv/modules/mem_mdlw/src/: basic_vision_ocv_provider.cpp
vision_ocv/modules/ros_mdlw/kpsr_ros_vision_ocv/: CMakeLists.txt  package.xml
vision_ocv/modules/ros_mdlw/kpsr_ros_vision_ocv/include/kpsr_ros_vision_ocv/: image_encoding_helper.h  image_from_ros_middleware_provider.h  image_ros_mapper.h  image_to_ros_channel.h  image_to_ros_middleware_provider.h
vision_ocv/modules/ros_mdlw/kpsr_ros_vision_ocv/src/: image_encoding_helper.cpp
vision_ocv/modules/ros_mdlw/kpsr_ros_vision_ocv/test/: config.h  file_utils.cpp  file_utils.h  simple_read_service.h  simple_write_service.h  test_kpsr_ros_vision_ocv.cpp
vision_ocv/modules/vision_ocv/: CMakeLists.txt
vision_ocv/modules/vision_ocv/include/klepsydra/vision_ocv/: file_image_stream_service.h  group_definitions.h  image_data_factory.h  image_event_data.h  image_file_utils.h  mpeg_writer.h
vision_ocv/modules/vision_ocv/src/: file_image_stream_service.cpp  image_data_factory.cpp  image_file_utils.cpp  mjpeg_writer.cpp
vision_ocv/modules/zmq_mdlw/: CMakeLists.txt
vision_ocv/modules/zmq_mdlw/include/klepsydra/zmq_vision_ocv/: group_definitions.h  image_event_data_zmq_mapper.h
vision_ocv/tests/: CMakeLists.txt
vision_ocv/tests/common/: CMakeLists.txt  config.h
vision_ocv/tests/common/include/: file_utils.h  simple_read_service.h  simple_write_service.h
vision_ocv/tests/common/src/: file_utils.cpp  simple_read_service.cpp
vision_ocv/tests/dds_vision_ocv_tests/: CMakeLists.txt
vision_ocv/tests/dds_vision_ocv_tests/src/: ddsstg_vision_ocv_test.cpp  main.cpp
vision_ocv/tests/mem_vision_ocv_tests/: CMakeLists.txt
vision_ocv/tests/mem_vision_ocv_tests/include/: file_utils.h  simple_read_service.h  simple_write_service.h  slow_read_service.h
vision_ocv/tests/mem_vision_ocv_tests/src/: basic_vision_ocv_test.cpp  file_utils.cpp  image_multiplexer_vision_ocv_test.cpp  main.cpp  video_streaming_test.cpp
vision_ocv/tests/modules/ros_mdlw/kpsr_ros_vision_ocv/test/: config.h
vision_ocv/tests/zmq_vision_ocv_tests/: CMakeLists.txt
vision_ocv/tests/zmq_vision_ocv_tests/src/: main.cpp  zmqstg_vision_ocv_test.cpp
(+20 files in other folders)
